--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "semantic-ui-css": "^2.4.1",
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"https://stormy-forest-83840.herokuapp.com/"
+  "proxy": "https://stormy-forest-83840.herokuapp.com/"
 }
