--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
