--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.1.2",
