--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://stormy-forest-83840.herokuapp.com/"
+  "proxy": "https://ponder-social-media-app-backend-server.onrender.com/"
 }
